# game-engine

./: CMakeLists.txt  flake.nix  result
.cache/clangd/index/: dag.cppm.505C1A1DD6ABE84A.idx  engine.cppm.C56476E89BFF3EC9.idx  main-ecs.cpp.2B89E991E1988496.idx  main-oop.cpp.F911349A0388FCB2.idx  main.cpp.0E239688D7E2381D.idx  mod1.cppm.E07F494489101D33.idx  util.cppm.03904EA522DCBD99.idx
src/: dag.cppm  engine.cppm  main-ecs.cpp  main-oop.cpp  main.cpp  util.cppm
